--- a/learning_logs/templates/learning_logs/index.html
+++ b/learning_logs/templates/learning_logs/index.html
@@ -1,4 +1,6 @@
-<p>Learning Log</p>
+{% extends "learning_logs/base.html" %}
 
+{% block content %}
 <p>Learning Log helps you keep track of your learning, for any topic you are
-learning about. </p>
+learning about.</p>
+{% endblock content %}
